	Algorithm)
	* Refactoring of the EllipticCurve class to unify basic properties of
	elliptic curves (generator group order, generator point, cofactor, field
	characteristic)
	* Inheritance of docstrings via intoduction of doc_inherit() decorator
	* Added method for retrieving the j-invariant of a ShortWeierstrassCurve
	and a method to detect if a curve is anomaleous.

Summary of changes from v0.05 to v0.06 (2016-03-01)
===================================================

	* Refactoring of curve database, include now the origin and OIDs
	* Threw out some duplicate curves and instead added their names as aliases
	* Added generated OpenSSL testcases
	* Curve DB entries now have various means of displaying their pretty name
	* Heuristic to detect Koblitz curves

Summary of changes from v0.04 to v0.05 (2015-08-12)
===================================================

	* Critical bugfix in twisted Edwards addition that somehow slipped through
	all testcases before is now fixed.
	* Included all of DJBs SafeCurves (http://safecurves.cr.yp.to/)
	* Small bugfix in Tonelli-Shanks algorithm that would sometimes fail with
	very small probability (p = 1 / modulus)
	* Curve database is not initialize all at once now, but is generated lazy
	(i.e. on first use)

Summary of changes from v0.03 to v0.04 (2015-08-11)
===================================================

	* Massively refactored code to be able to deal with twisted Edwards
	curves, Montgomery curves and short-formed Weierstrass curves all similary
	ways (without explicit exceptions for Ed25519 and Curve25519)
	* Implemented conversion between domain parameters of twisted Edwards and
	Montgomery curves (both directions)
	* Implemented conversion of points of twisted Edwards to Montomery curves
	and back. This includes conversion of Ed25519 and Curve25519 points back
	and forth.

Summary of changes from v0.02 to v0.03 (2015-08-06)
===================================================
