@@ -1,0 +1,14 @@
+------------------------------------------------------------------------------------------------------------------------
+1
+1
+1
+(0, Elliptic Curve defined by y^2 = x^3 + 297190522446607939568481567949428902921613329152*x + 173245649450172891208247283053495198538671808088 over Finite Field of size 1332297598440044874827085558802491743757193798159)
+(1, Elliptic Curve defined by y^2 = x^3 + 286930105399268506901839909491341828878358473537*x + 695569198734598063956966772910049041505818893755 over Finite Field of size 1332297598440044874827085558802491743757193798159)
+(2, Elliptic Curve defined by y^2 = x^3 + 160828513840146972164816889697290121302085870352*x + 783577048352306008263480483585897564718916165854 over Finite Field of size 1332297598440044874827085558802491743757193798159)
+(3, Elliptic Curve defined by y^2 = x^3 + 1006589305077680016594838056444928809499961404357*x + 655812527253368168624849428648838161699769008216 over Finite Field of size 1332297598440044874827085558802491743757193798159)
+(4, Elliptic Curve defined by y^2 = x^3 + 360098740348537988009781004461963535385483355315*x + 208317343449306929006042839858522574750869147256 over Finite Field of size 1332297598440044874827085558802491743757193798159)
+(5, Elliptic Curve defined by y^2 = x^3 + 511062514718518267837303660801041748913487041161*x + 695336452867622051596775954858003258967520490486 over Finite Field of size 1332297598440044874827085558802491743757193798159)
+(6, Elliptic Curve defined by y^2 = x^3 + 1162817150369452625345205483691497993979908969722*x + 486684989149964696280375494713620490872232533371 over Finite Field of size 1332297598440044874827085558802491743757193798159)
+(7, Elliptic Curve defined by y^2 = x^3 + 79759596461779703750976646165468320517695717557*x + 1306754750196845129720038081361049154887282198703 over Finite Field of size 1332297598440044874827085558802491743757193798159)
+(8, Elliptic Curve defined by y^2 = x^3 + 758339949336154731174763545413174521188364713864*x + 345314403503786293228618069977811193562768429904 over Finite Field of size 1332297598440044874827085558802491743757193798159)
+(9, Elliptic Curve defined by y^2 = x^3 + 1237895741141457878516308415910073045988541076298*x + 1152314096804480144612609269799341355462563973736 over Finite Field of size 1332297598440044874827085558802491743757193798159)
