@@ -21,6 +21,9 @@ Summary of changes from v0.06 to v0.07 (2016-xx-xx)
 	* Inheritance of docstrings via intoduction of doc_inherit() decorator
 	* Added method for retrieving the j-invariant of a ShortWeierstrassCurve
 	and a method to detect if a curve is anomaleous.
+	* Simple isomorphous curve calculation for short Weierstrass curves by
+	substitution of (x, y) by (x^2, y^3) and calculation of isomorphous curves
+	with a predefined domain parameter coefficient a
 
 Summary of changes from v0.05 to v0.06 (2016-03-01)
 ===================================================
